Expand JVM GC guidelines and production settings
Added detailed JVM and GC settings for production environments, including rules for heap size allocation, GC selection, and memory limits.